sample/retrieveUnpackaged/objects/Financial_Hardship__c.object
<CustomObject>
    <description>Financial Hardship Stream

Represents Financial Hardship information for customers</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Signifies that the Financial Hardship Program is Active for the Customer</inlineHelpText>
        <label>Program Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assistance_Options__c</fullName>
        <label>Assistance Options</label>
        <picklist>
            <picklistValues>
                <fullName>Payment Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CentrePay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plumbing Assist Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>URGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good Shepherd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Time To Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiated Writeoff</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <description>Returns the Account Record ID for the associated customer</description>
        <formula>Customer__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field should be invisible.</inlineHelpText>
        <label>Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SCRUM 2013 - Vulnerable Customer Stream</description>
        <inlineHelpText>Represents a Customer under a Financial Hardship program</inlineHelpText>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Hardship</relationshipLabel>
        <relationshipName>Financial_Hardship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Program_Balance__c</fullName>
        <label>End of Program Account Balance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exception_Reason__c</fullName>
        <label>Exception Reason</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exit_Date__c</fullName>
        <inlineHelpText>The exit date of the program</inlineHelpText>
        <label>Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exit_Reason__c</fullName>
        <inlineHelpText>The exit reason for the Customer who exits the Financial Hardship Program</inlineHelpText>
        <label>Exit Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Hardship_Status__c</fullName>
        <formula>IF(ISPICKVAL(Hardship_Status__c, &apos;Gold&apos;), IMAGE(&quot;/resource/1383262049000/GoldStar&quot;, &quot;checked&quot;), 
(IF(ISPICKVAL(Hardship_Status__c, &apos;Silver&apos;), (IMAGE(&quot;/resource/1383262049000/SilverStar&quot;, &quot;checked&quot;)), 
(IF(ISPICKVAL(Hardship_Status__c, &apos;Bronze&apos;), (IMAGE(&quot;/resource/1383262049000/BronzeStar&quot;, &quot;checked&quot;)),null)
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardship_Status__c</fullName>
        <inlineHelpText>Represents the level of financial hardship status for the related customer</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hardship_Story_Type__c</fullName>
        <inlineHelpText>The type of story with the Financial Hardship Customer. Story will not be visible to the rest of the SEW team, whereas Program and General stories will be visible.</inlineHelpText>
        <label>Hardship Story Type</label>
        <picklist>
            <picklistValues>
                <fullName>Story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hardship_Story__c</fullName>
        <inlineHelpText>The initial story for the Financial Hardship Customer.</inlineHelpText>
        <label>Hardship Story</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Review_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Represents the last time the date was reviewed. When record created, default to record create date</description>
        <inlineHelpText>Represents the last time the date was reviewed. For new Financial Hardship applications, default to the created date</inlineHelpText>
        <label>Last Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Review_Action__c</fullName>
        <inlineHelpText>TO BE DEFINED</inlineHelpText>
        <label>Next Review Action</label>
        <picklist>
            <picklistValues>
                <fullName>Check URGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Centrepay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Payment Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Plumbing Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Negotiated Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze Exit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Water usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send URGS Application</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Review_Date__c</fullName>
        <defaultValue>TODAY() + 56</defaultValue>
        <inlineHelpText>The next review date. Defaulted to eight weeks from today, however SAO&apos;s can change this (except for setting it to a past date on creation).</inlineHelpText>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Review_Status__c</fullName>
        <description>What the next review requires</description>
        <inlineHelpText>What the next review requires</inlineHelpText>
        <label>Next Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nominated_Financial_Hard_Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The nominated Financial Hardship Billing Account</inlineHelpText>
        <label>Nominated Billing Account Number</label>
        <referenceTo>Billing_Account__c</referenceTo>
        <relationshipLabel>Financial Hardship</relationshipLabel>
        <relationshipName>Financial_Hardship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <description>Developed for supporting the related list, to display the SEW Customer Assist Officer&apos;s Name and extension. Refer to US-751 / Vulnerable Customer Stream</description>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName &amp; &quot; - x&quot; &amp;   Owner:User.Extension</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Hardship</relationshipLabel>
        <relationshipName>Financial_Hardship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Method__c</fullName>
        <inlineHelpText>Represents how the Customer was referred to the Financial Hardship program</inlineHelpText>
        <label>Referral Method</label>
        <picklist>
            <picklistValues>
                <fullName>Self identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercantile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial counsellor - Good Shepherd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial counsellor - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Priority Plumbing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>The initiation of the Financial Hardship program</inlineHelpText>
        <label>Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Program_Balance__c</fullName>
        <description>When the program is established for the Customer, capture the balance</description>
        <inlineHelpText>The Balance owing for the Customer, when they enter the Financial Hardship Program</inlineHelpText>
        <label>Start of Program Account Balance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Welcome_Letter__c</fullName>
        <label>Welcome Letter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Financial Hardship</label>
    <listViews>
        <fullName>My_Financial_Hardship_Programs</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Nominated_Financial_Hard_Billing_Account__c</columns>
        <columns>Customer__c</columns>
        <columns>Hardship_Status__c</columns>
        <columns>Next_Review_Date__c</columns>
        <columns>Next_Review_Action__c</columns>
        <columns>Next_Review_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>My Financial Hardship Programs</label>
        <sharedTo>
            <group>Admin</group>
            <group>Financial_Hardship</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Programs_for_review_today</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Nominated_Financial_Hard_Billing_Account__c</columns>
        <columns>Customer__c</columns>
        <columns>Hardship_Status__c</columns>
        <columns>Next_Review_Date__c</columns>
        <columns>Next_Review_Action__c</columns>
        <columns>Next_Review_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Next_Review_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Next_Review_Action__c</field>
            <operation>notEqual</operation>
            <value>Silver Review,Bronze Exit</value>
        </filters>
        <label>My Programs for review today</label>
        <sharedTo>
            <group>Admin</group>
            <group>Financial_Hardship</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Teams_Programs_for_review_today</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Nominated_Financial_Hard_Billing_Account__c</columns>
        <columns>Customer__c</columns>
        <columns>Hardship_Status__c</columns>
        <columns>Next_Review_Date__c</columns>
        <columns>Next_Review_Action__c</columns>
        <columns>Next_Review_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Next_Review_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Next_Review_Action__c</field>
            <operation>notEqual</operation>
            <value>Silver Review,Bronze Exit</value>
        </filters>
        <label>My Teams Programs for review today</label>
    </listViews>
    <listViews>
        <fullName>Teams_Financial_Hardship_Programs</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Nominated_Financial_Hard_Billing_Account__c</columns>
        <columns>Customer__c</columns>
        <columns>Hardship_Status__c</columns>
        <columns>Next_Review_Date__c</columns>
        <columns>Next_Review_Action__c</columns>
        <columns>Next_Review_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>Teams Financial Hardship Programs</label>
        <sharedTo>
            <group>Admin</group>
            <group>Financial_Hardship</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>FHA-{000000}</displayFormat>
        <label>Hardship Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Hardship</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Billing_Account_Cant_Be_Changed</fullName>
        <active>true</active>
        <description>Once the record has been created, you can&apos;t change the billing account.</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp;  ISCHANGED(  Nominated_Financial_Hard_Billing_Account__c  ) &amp;&amp;  $Profile.Name  = &apos;SEW Customer Assist Officer&apos;</errorConditionFormula>
        <errorDisplayField>Nominated_Financial_Hard_Billing_Account__c</errorDisplayField>
        <errorMessage>The Nominated Billing Account cannot be modified once the Financial Hardship program has been created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_modify_existing_hardship_story</fullName>
        <active>true</active>
        <description>If a hardship story has already been entered, you cannot modify it.</description>
        <errorConditionFormula>ISCHANGED( Hardship_Story__c ) &amp;&amp;  LEN( PRIORVALUE(Hardship_Story__c)) &gt; 0</errorConditionFormula>
        <errorDisplayField>Hardship_Story__c</errorDisplayField>
        <errorMessage>The Hardship Story cannot be changed once it has been entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exception_reason_cant_be_blank</fullName>
        <active>true</active>
        <description>If the Next Review Status is Exception, then the Exception Reason must be populated.</description>
        <errorConditionFormula>ISPICKVAL( Next_Review_Status__c , &apos;Exception&apos;) &amp;&amp; ( ISNULL( Exception_Reason__c )  ||  ISBLANK( Exception_Reason__c )  )</errorConditionFormula>
        <errorDisplayField>Exception_Reason__c</errorDisplayField>
        <errorMessage>If the Next Review Status is Exception, then the Exception Reason must be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exit_Date_Blank_on_Creation</fullName>
        <active>true</active>
        <description>Exit Date must be blank on creation of the record</description>
        <errorConditionFormula>ISNEW() &amp;&amp; NOT (ISNULL( Exit_Date__c) || ISBLANK(Exit_Date__c))</errorConditionFormula>
        <errorDisplayField>Exit_Date__c</errorDisplayField>
        <errorMessage>Exit Reason canot be entered when creating a Financial Hardship program</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exit_Reason_Blank_on_Creation</fullName>
        <active>true</active>
        <description>Exit Reason must be blank on creation of the record</description>
        <errorConditionFormula>ISNEW() &amp;&amp; NOT (ISPICKVAL( Exit_Reason__c , &quot;&quot;) )</errorConditionFormula>
        <errorDisplayField>Exit_Reason__c</errorDisplayField>
        <errorMessage>Exit Reason cannot be entered when creating a Financial Hardship program</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Next_Review_Action_Limitations_Bronze</fullName>
        <active>true</active>
        <description>If Status = Bronze
     the Next Review Action cannot be  Silver Review ,Check Gold, Check URGS</description>
        <errorConditionFormula>ISPICKVAL( Hardship_Status__c , &quot;Bronze&quot; ) &amp;&amp; (ISPICKVAL (Next_Review_Action__c, &quot;Silver Review&quot; ) || ISPICKVAL (Next_Review_Action__c, &quot;Check Gold&quot; ) || ISPICKVAL (Next_Review_Action__c, &quot;Check URGS&quot; ))</errorConditionFormula>
        <errorDisplayField>Next_Review_Action__c</errorDisplayField>
        <errorMessage>If the Hardship Status is Bronze then Next Review Action cannot be Silver Review, Check Gold or Check URGS</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Next_Review_Action_Limitations_Gold</fullName>
        <active>true</active>
        <description>If Status = Gold 
    the Next Review Action cannot be  Bronze Exit, Bronze Review , Silver Review</description>
        <errorConditionFormula>ISPICKVAL( Hardship_Status__c , &quot;Gold&quot; ) &amp;&amp; (ISPICKVAL (Next_Review_Action__c, &quot;Bronze Exit&quot; ) || ISPICKVAL (Next_Review_Action__c, &quot;Bronze Review&quot; ) || ISPICKVAL (Next_Review_Action__c, &quot;Silver Review&quot; ))</errorConditionFormula>
        <errorDisplayField>Next_Review_Action__c</errorDisplayField>
        <errorMessage>If the Hardship Status is Gold then Next Review Action cannot be Bronze Exit, Bronze Review or Silver Review</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Next_Review_Action_Limitations_Silver</fullName>
        <active>true</active>
        <description>If Status = Silver
    the Next review Action cannot be  Bronze Exit, Bronze Review, Check Gold, Check URGS</description>
        <errorConditionFormula>ISPICKVAL( Hardship_Status__c , &quot;Silver&quot; ) &amp;&amp; (ISPICKVAL (Next_Review_Action__c, &quot;Bronze Exit&quot; ) || ISPICKVAL (Next_Review_Action__c, &quot;Bronze Review&quot; ) || ISPICKVAL (Next_Review_Action__c, &quot;Check Gold&quot;) || ISPICKVAL (Next_Review_Action__c, &quot;Check URGS&quot; ))</errorConditionFormula>
        <errorDisplayField>Next_Review_Action__c</errorDisplayField>
        <errorMessage>If the Hardship Status is Silver then Next Review Action cannot be Bronze Exit, Bronze Review, Check Gold or Check URGS</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Next_Review_Date_must_not_be_in_past</fullName>
        <active>true</active>
        <description>On creation, the Next Review Date cannot be in the past</description>
        <errorConditionFormula>ISNEW() &amp;&amp;  Next_Review_Date__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>Next_Review_Date__c</errorDisplayField>
        <errorMessage>On creation, the Next Review Date must not be in the past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Contact_Cant_Be_Changed</fullName>
        <active>true</active>
        <description>Once the record has been created, you can&apos;t change the Primary Contact.</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp;  ISCHANGED( Primary_Contact__c ) &amp;&amp;  $Profile.Name  = &apos;SEW Customer Assist Officer&apos;</errorConditionFormula>
        <errorDisplayField>Primary_Contact__c</errorDisplayField>
        <errorMessage>The Primary Contact Name cannot be modified once the Financial Hardship program has been created.</errorMessage>
    </validationRules>
</CustomObject>